// Vitest Snapshot v1

exports[`github-action-multientry > dist 1`] = `
[
  "cleanup.js",
  "index.js",
  "setup.js",
]
`;

exports[`github-action-multientry > dist/cleanup.js 1`] = `
"use strict";
var __defProp = Object.defineProperty;
var __name = (target, value) => __defProp(target, "name", { value, configurable: true });

// src/cleanup.ts
function cleanup() {
  console.log(process.env);
}
__name(cleanup, "cleanup");
cleanup();

`;

exports[`github-action-multientry > dist/index.js 1`] = `
"use strict";
var __defProp = Object.defineProperty;
var __name = (target, value) => __defProp(target, "name", { value, configurable: true });

// src/index.ts
function main() {
  console.log(process.env);
}
__name(main, "main");
main();

`;

exports[`github-action-multientry > dist/setup.js 1`] = `
"use strict";
var __defProp = Object.defineProperty;
var __name = (target, value) => __defProp(target, "name", { value, configurable: true });

// src/setup.ts
function setup() {
  console.log(process.env);
}
__name(setup, "setup");
setup();

`;

exports[`github-action-multientry > logs 1`] = `
✔ Resolving build manifests
  ─ ℹ Checking 'action.yml'
  ─ ℹ Checking 'package.json'
  ✔ Run preparations
  ─ ℹ Removing 'dist' directory
  ✔ Making bundle from 'action.yml'
  ─ ℹ Using '.runs.main' entry: ./src/index.ts
  ─ ℹ Using '.runs.pre' entry: ./src/setup.ts
  ─ ℹ Using '.runs.post' entry: ./src/cleanup.ts
  ─ ℹ Using '.runs.using' entry: node16
------
Exit Code: 0
`;
